# cdk-bedrock

./: .gitignore  README.md  cdk-bedrock.code-workspace  cdk.example.json  cdk.json  package-lock.json  package.json  parameter.template.ts  tsconfig.json
lib/: stack.ts
lib/construct/: bedrock.ts  ecs.ts  function.ts
lib/constructs/: action.ts  bedrock.ts  ecs.ts  function.ts  kb.ts  slackbot.ts
lib/image/agent/: README.md  pyproject.toml
lib/image/agent-go/: Dockerfile  go.mod  go.sum  main.go
lib/image/agent/src/agent/: Dockerfile  agent.py  schema.yaml
lib/image/agent/src/agent/get_instances_count/: agent.py  schema.yaml
lib/image/agent/src/agent/get_instances_with_open_permission/: agent.py  schema.yaml
lib/image/agent/src/agent/get_instances_without_owner/: agent.py  schema.yaml
lib/image/app/: pyproject.toml
lib/image/app/src/app/: Dockerfile  app.py  requirements.txt
lib/image/slackbot/: Dockerfile  go.mod  go.sum  utils.go
lib/image/slackbot/consumer/: main.go
lib/image/slackbot/dequeue/: main.go
lib/image/slackbot/enqueue/: main.go
lib/image/slackbot/messages/: utils.go
lib/image/slackbot/producer/: main.go
lib/instruction/: instruction
lib/schema/: schema.yaml
test/: cdk-bedrock.test.ts
