[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nekrassov01", email = "unclek62@gmail.com" }
]
dependencies = [
    "boto3>=1.34.123",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
