[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nekrassov01", email = "unclek62@gmail.com" }
]
dependencies = [
    "langchain>=0.2.2",
    "langchain-aws>=0.1.6",
    "langchain-community>=0.2.2",
    "streamlit>=1.35.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
